--- a/vue-slider-markup-base/css/style.css
+++ b/vue-slider-markup-base/css/style.css
@@ -13,8 +13,8 @@
 
 .item {
     float: left;
-    width: 700px;
-    height: 300px;
+    width: 900px;
+    height: 500px;
     position: relative;
 }
 
@@ -26,21 +26,25 @@
 
 .item .text {
     position: absolute;
-    right: 20px;
-    bottom: 20px;
+    left: 0;
+    right: 0;
+    bottom: 0;
     text-align: right;
     color: white;
+    padding: 10px 25px;
+    background-color: #00000083;
+    min-height: 120px;
 }
 
 .thumbs {
     float: left;
-    height: 300px;
+    height: 500px;
     background: #000;
     position: relative;
 }
 
 .thumb {
-    height: calc((300px) / 5);
+    height: calc((500px) / 5);
     opacity: 0.5;
 }
 
@@ -55,7 +59,8 @@
     opacity: 1;
 }
 
-.prev, .next {
+.prev,
+.next {
     width: 20px;
     height: 20px;
     margin: 10px 0;
