[feat] add :hover effect

--- a/vue-slider-markup-base/bonus/css/style.css
+++ b/vue-slider-markup-base/bonus/css/style.css
@@ -54,6 +54,11 @@
     object-fit: cover;
 }
 
+.thumb img:hover {
+    cursor: pointer;
+    scale: 80%;
+}
+
 .thumb.active {
     border: 2px solid #ccc;
     opacity: 1;
